WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
110843
SelectorQuery should not ever use ResolvingStyle mode.
https://bugs.webkit.org/show_bug.cgi?id=110843
Summary
SelectorQuery should not ever use ResolvingStyle mode.
Dimitri Glazkov (Google)
Reported
2013-02-25 21:34:07 PST
SelectorQuery should not ever use ResolvingStyle mode.
Attachments
Patch
(2.06 KB, patch)
2013-02-25 21:36 PST
,
Dimitri Glazkov (Google)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dimitri Glazkov (Google)
Comment 1
2013-02-25 21:36:44 PST
Created
attachment 190199
[details]
Patch
Eric Seidel (no email)
Comment 2
2013-02-25 22:57:00 PST
Comment on
attachment 190199
[details]
Patch So this is just a perf improvement? Do we have microbenchmarks which would be effected by this?
Dimitri Glazkov (Google)
Comment 3
2013-02-26 07:49:43 PST
I goess it could be viewed as performance optimization. For instance, when computing webkitMatchesSelector(":first-line"), in ResolvingStyle mode, we would be creating ElementRareData, as opposed to QueryingRules, where we wouldn't be:
https://code.google.com/p/chromium/codesearch#chromium/src/third_party/WebKit/Source/WebCore/dom/Element.cpp&sq=package:chromium&type=cs&rcl=1361871648&l=2071
There's tons of similar things that would do the same types of things in querySelector. Not sure if we have a microbench that would be affected.
WebKit Review Bot
Comment 4
2013-02-26 20:36:21 PST
Comment on
attachment 190199
[details]
Patch Clearing flags on attachment: 190199 Committed
r144140
: <
http://trac.webkit.org/changeset/144140
>
WebKit Review Bot
Comment 5
2013-02-26 20:36:25 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug